# recurrent_bitnet

./: .gitignore  README.md  add_training_cells.py  pyproject.toml
docs/: DESIGN.md  PAPER_orthogonal_streams.md  TRAINING_STRATEGY.md  V3_QWEN35.md  rys_analysis.md
notebooks/: RecurrentBitNet.ipynb  RecurrentBitNet_V2.ipynb  RecurrentBitNet_V2_SPR.ipynb  gen_spr_notebook.py
src/: __init__.py  bitlinear.py  distill.py  surgery.py
