[project]
name = "recurrent-bitnet"
version = "0.3.0"
description = "Selective ternary quantization of hybrid linear-attention transformers"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "transformers @ git+https://github.com/huggingface/transformers.git",
    "datasets>=3.0.0",
    "accelerate>=1.0.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "jupytext>=1.16.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
